--- a/Main/templates/calculator.html
+++ b/Main/templates/calculator.html
@@ -1,40 +1,54 @@
 {% extends "layout.html" %} {% block title %}<title>Calculator</title>{%
     endblock %} {% block content %}
-    <form method="POST">
-      <h3 align="center">Calculator</h3>
-      <div class="form-group">
-        <label for="calories">Calories</label>
-      </div>
-      <div class="form-group">
-        <label for="proteins">Proteins</label>
-        <input
-          type="text"
-          class="form-control"
-          id="nutrients"
-          name="Proteins"
-          placeholder="Enter the amount of Proteins" />
-      </div>
-      <div class="form-group">
-        <label for="Carbs">Carbs</label>
-        <input
-          type="text"
-          class="form-control"
-          id="nutrients"
-          name="Carbs"
-          placeholder="Enter the amount of Carbs" />
-      </div>
-      <div class="form-group">
-        <label for="Fats">Fats</label>
-        <input
-          type="text"
-          class="form-control"
-          id="nutrients"
-          name="Fats"
-          placeholder="Enter the amount of Fats" />
-      </div>
-      <br />
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-    
-    {% endblock content %}
+    <div class="content-section">
+      <form method="POST" action="">
+           {{ form.hidden_tag() }}
+           <fieldset class = "form-group">
+               <legend class="border-bottom mb-4">Calculator</legend>
+               <div class="form-group">
+                   {{ form.proteins.label(class="form-control-label")}}
+                   {% if form.proteins.errors %}
+                       {{ form.proteins(class="form-control form-control-lg is-invalid")}}
+                       <div class='invalid-feedback'>
+                           {% for error in form.proteins.errors %}
+                            <span>{{ error }}</span>
+                           {% endfor %}
+                       </div>
+                   {% else %}
+                       {{ form.proteins(class="form-control form-control-lg")}}
+                   {% endif%}
+               </div>
+               <div class="form-group">
+                   {{ form.carbs.label(class="form-control-label")}}
+                   {% if form.carbs.errors %}
+                       {{ form.carbs(class="form-control form-control-lg is-invalid")}}
+                       <div class='invalid-feedback'>
+                           {% for error in form.carbs.errors %}
+                            <span>{{ error }}</span>
+                           {% endfor %}
+                       </div>
+                   {% else %}
+                       {{ form.carbs(class="form-control form-control-lg")}}
+                   {% endif%}
+               </div>
+               <div class="form-group">
+                {{ form.fats.label(class="form-control-label")}}
+                {% if form.fats.errors %}
+                    {{ form.fats(class="form-control form-control-lg is-invalid")}}
+                    <div class='invalid-feedback'>
+                        {% for error in form.fats.errors %}
+                         <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.carbs(class="form-control form-control-lg")}}
+                {% endif%}
+            </div>
+           </fieldset>
+           <div class="form-group">
+               {{ form.submit(class="btn btn-outline-info")}}
+           </div>
+      </form> 
+   </div>
+{% endblock content %}
     
