--- a/Main/templates/calories.html
+++ b/Main/templates/calories.html
@@ -57,9 +57,6 @@ endblock %} {% block content %}
       placeholder="Distribution" />
   </div>
   <br />
-  <div class="form-group">
-    {{ form.submit(class="btn btn-outline-info")}}
-  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
 </form>
-
 {% endblock content %}
