--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -43,9 +43,9 @@
             <div class="navbar-nav mr-auto">
               <!-- Navbar Left Side -->
               <a class="nav-item nav-link" href="{{ url_for('main') }}">Main</a>
+              <a class="nav-item nav-link" href="{{ url_for('test') }}">Test</a>
               <a class="nav-item nav-link" href="{{ url_for('calculator') }}">Calculator</a>
               <a class="nav-item nav-link" href="{{ url_for('calories') }}">Calories</a>
-              <a class="nav-item nav-link" href="{{ url_for('meals') }}">Meals</a>
               <a class="nav-item nav-link" href="{{ url_for('results') }}">Results</a>
             </div>
             <!-- Navbar Right Side -->
