--- a/main/templates/calculator.html
+++ b/main/templates/calculator.html
@@ -15,7 +15,7 @@
                            {% endfor %}
                        </div>
                    {% else %}
-                       {{ form.proteins(class="form-control form-control-lg is-invalid")}}
+                       {{ form.proteins(class="form-control form-control-lg")}}
                    {% endif%}
                </div>
                <div class="form-group">
