--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -50,8 +50,8 @@
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
-              <a class="nav-item nav-link" href="{{ url_for('home') }}">Login</a>
-              <a class="nav-item nav-link" href="{{ url_for('home') }}">Register</a>
+              <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
+              <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
             </div>
           </div>
         </div>
