--- a/main/templates/results.html
+++ b/main/templates/results.html
@@ -2,9 +2,15 @@
 {% block content %}
 <h1>Results Page</h1>
 <p>Choose one from the list:</p>
+<form>
 {% for res in results %}
-<div>
-   <p> {{ res[0][0] }} </p>
-</div>
+   <div class='form-group'>
+      {% for dish in res %}
+         {{ dish }}
+         <br>
+      {% endfor %}
+   </div>
+   <p>---------</p>
 {% endfor %}
+</form>
 {% endblock content %}
