--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -66,8 +66,19 @@
       </div>
     </header>
     <main role="main" class="container">
-      {% block content%}
-      {% endblock %}
+      <div class="row">
+        <div class="col-md-8">
+          {% with messages = get_flashed_messages(with_categories=true) %}
+              {% if messages%}
+                  {% for category, message in messages%}
+                      <div class = "alert alert-{{ category }}">
+                          {{ message }}
+                      </div>
+                  {% endfor %}
+              {% endif %}
+          {% endwith %}
+          {% block content %}{% endblock %}
+        </div>
     </main>
 
     <!-- Optional JavaScript -->
