--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,5 +1,5 @@
-{% extends "layout.html" %} {% block title %}<title>Main Page</title>{% endblock
-%} {% block content %}
+{% extends "layout.html" %}
+{% block content %}
 <form method="POST">
   <h3 align="center">Main Page</h3>
   <div class="form-group">
