--- a/main/templates/personal_info.html
+++ b/main/templates/personal_info.html
@@ -1,5 +1,5 @@
-{% extends "layout.html" %} {% block title %}<title>Home Page</title>{% endblock
-    %} {% block content %}
+{% extends "layout.html" %}
+{% block content %}
     <div class="content-section">
         <form method="POST" action="">
             {{ form.hidden_tag() }}
