--- a/main/templates/results.html
+++ b/main/templates/results.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} {% block title %}<title>About Page</title>{%endblock %}
+{% extends "layout.html" %}
 {% block content %}
 <h1>Results Page</h1>
 <p>Choose one from the list:</p>
