--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -1,5 +1,5 @@
-{% extends "layout.html" %} {% block title %}<title>Home Page</title>{% endblock
-%} {% block content %}
+{% extends "layout.html" %}
+{% block content %}
 <h1>Home Page</h1>
 <p>We are happy to see you here</p>
 {% endblock content %}
