--- a/main/templates/meals.html
+++ b/main/templates/meals.html
@@ -1,6 +1,5 @@
-{% extends "layout.html" %} {% block title %}<title>Available dishes</title>{% endblock
-    %} {% block content %}
-
+{% extends "layout.html" %}
+{% block content %}
     <div class="content-section">
         <form method="POST" action="">
             {{ form.hidden_tag() }}
