--- a/main/templates/personal_info.html
+++ b/main/templates/personal_info.html
@@ -70,6 +70,19 @@
                         {{ form.goal(class="form-control form-control-lg") }}
                     {% endif %}
                 </div>
+                <div class="form-group">
+                    {{ form.activity.label(class="form-control-label") }}
+                    {% if form.activity.errors %}
+                        {{ form.activity(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.activity.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.activity(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
                 <div class="form-check">
                     {{ form.agree(class="form-check-input") }}
                     {{ form.agree.label(class="form-check-label") }}
