--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -1,5 +1,25 @@
 {% extends "layout.html" %}
 {% block content %}
-<h1>Home Page</h1>
-<p>We are happy to see you here</p>
+<div class="container">
+    <link href="{{ url_for('static', filename='home.css') }}" rel="stylesheet">
+    <div class="text">
+        <p>
+            Наш організм — це складний механізм, від злагодженої роботи якого залежить загальне самопочуття та настрій. Щоб повноцінно працювати, йому необхідний заряд енергії, джерелом якої є їжа. Саме вона підтримує всі важливі процеси життєдіяльності, дає змогу нашим клітинам і тканинам оновлюватися. І чим здоровіше харчування забезпечуємо, тим швидше оновлюється організм і тим довше він залишається молодим.
+        </p>
+        <p>
+            "Їжа, яку ви їсте, може бути або найбезпечнішою та найпотужнішою формою ліків, або найповільнішою формою отрути". - Енн Вігмор
+        </p>
+        <div class="third-paragraph">
+            <p>
+            <br>• З початку навчання трапезна для вас стала другим домом?
+            <br>• Важко втриматися від чогось смачного, проте не корисного?
+            <br>• Почали помічати за собою заїдання стресу чи голод всього за пару годин після прийому їжі?
+            </p>
+        </div>
+        <p>
+            Ми з радістю тобі допоможемо підібрати збалансований і ситний прийом їжі, хутчіш<a class="ml-2 btn-register" href="{{ url_for('register') }}">реєструйся</a> або<a class="ml-2 btn-register" href="{{ url_for('login') }}">залогінся</a>, або ж
+            скористайся нашим<a class="ml-2 btn-register" href="{{ url_for('calculator') }}">калькулятором</a>:)
+        </p>
+    </div>
+</div>
 {% endblock content %}
