--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
 <form method="POST">
-  <h3 align="center">Main Page</h3>
   <div class="form-group">
     <button
       type="button"
@@ -15,7 +14,7 @@
     <button
       type="button"
       class="form-control"
-      id="One-Time"
+      id="one-time"
       name="One-Time Meal">
       One-Time Meal
     </button>
