--- a/main/templates/calculator.html
+++ b/main/templates/calculator.html
@@ -1,54 +1,58 @@
 {% extends "layout.html" %}
 {% block content %}
-    <div class="content-section">
-      <form method="POST" action="">
-           {{ form.hidden_tag() }}
-           <fieldset class = "form-group">
-               <legend class="border-bottom mb-4">Calculator</legend>
-               <div class="form-group">
-                   {{ form.proteins.label(class="form-control-label")}}
-                   {% if form.proteins.errors %}
-                       {{ form.proteins(class="form-control form-control-lg is-invalid")}}
-                       <div class='invalid-feedback'>
-                           {% for error in form.proteins.errors %}
-                            <span>{{ error }}</span>
-                           {% endfor %}
-                       </div>
-                   {% else %}
-                       {{ form.proteins(class="form-control form-control-lg")}}
-                   {% endif%}
-               </div>
-               <div class="form-group">
-                   {{ form.carbs.label(class="form-control-label")}}
-                   {% if form.carbs.errors %}
-                       {{ form.carbs(class="form-control form-control-lg is-invalid")}}
-                       <div class='invalid-feedback'>
-                           {% for error in form.carbs.errors %}
-                            <span>{{ error }}</span>
-                           {% endfor %}
-                       </div>
-                   {% else %}
-                       {{ form.carbs(class="form-control form-control-lg")}}
-                   {% endif%}
-               </div>
-               <div class="form-group">
-                {{ form.fats.label(class="form-control-label")}}
-                {% if form.fats.errors %}
-                    {{ form.fats(class="form-control form-control-lg is-invalid")}}
+<link href="{{ url_for('static', filename='calculator.css') }}" rel="stylesheet">
+<div class="wrapper">
+<div class="content-section">
+    <form method="POST" action="">
+        {{ form.hidden_tag() }}
+        <fieldset class = "form">
+            <div class = "title">
+            Calculator
+            </div>
+            <div class="input_field">
+                {{ form.proteins.label(class="form-control-label")}}
+                {% if form.proteins.errors %}
+                    {{ form.proteins(class="form-control form-control-xxl is-invalid")}}
                     <div class='invalid-feedback'>
-                        {% for error in form.fats.errors %}
-                         <span>{{ error }}</span>
+                        {% for error in form.proteins.errors %}
+                        <span>{{ error }}</span>
                         {% endfor %}
                     </div>
                 {% else %}
-                    {{ form.fats(class="form-control form-control-lg")}}
+                    {{ form.proteins(class="form-control form-control-xxl")}}
                 {% endif%}
             </div>
-           </fieldset>
-           <div class="form-group">
-               {{ form.submit(class="btn btn-outline-info")}}
-           </div>
-      </form> 
-   </div>
+            <div class="input_field">
+                {{ form.carbs.label(class="form-control-label")}}
+                {% if form.carbs.errors %}
+                    {{ form.carbs(class="form-control form-control-xxl is-invalid")}}
+                    <div class='invalid-feedback'>
+                        {% for error in form.carbs.errors %}
+                        <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.carbs(class="form-control form-control-xxl")}}
+                {% endif%}
+            </div>
+            <div class="input_field">
+            {{ form.fats.label(class="form-control-label")}}
+            {% if form.fats.errors %}
+                {{ form.fats(class="form-control form-control-xxl is-invalid")}}
+                <div class='invalid-feedback'>
+                    {% for error in form.fats.errors %}
+                        <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
+            {% else %}
+                {{ form.fats(class="form-control form-control-xxl")}}
+            {% endif%}
+        </div>
+        </fieldset>
+        <div class="input_field">
+            {{ form.submit(class="btn btn-outline-info")}}
+        </div>
+    </form>
+</div>
 {% endblock content %}
     
