--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -46,7 +46,7 @@
               <!-- Navbar Left Side -->
               <a class="nav-item nav-link" href="{{ url_for('main') }}">Main</a>
               <a class="nav-item nav-link" href="{{ url_for('calculator') }}">Calculator</a>
-              <a class="nav-item nav-link" href="{{ url_for('calories') }}">Calories</a>
+              <a class="nav-item nav-link" href="{{ url_for('test') }}">Test</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
