--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -2,22 +2,10 @@
 {% block content %}
 <form method="POST">
   <div class="form-group">
-    <button
-      type="button"
-      class="form-control"
-      id="daily_distribution"
-      name="Daily Distribution">
-      Daily Distribution
-    </button>
+    <input type="submit", name="submit_button", value="Daily Distribution", class="form-control", id="daily_distribution">
   </div>
   <div class="form-group">
-    <button
-      type="button"
-      class="form-control"
-      id="one-time"
-      name="One-Time Meal">
-      One-Time Meal
-    </button>
+    <input type="submit", name="submit_button", value="Add Meal", class="form-control", id="all_meal">
   </div>
 </form>
 {% endblock content %}
