--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -18,7 +18,7 @@
         </div>
         <p>
             Ми з радістю тобі допоможемо підібрати збалансований і ситний прийом їжі, хутчіш<a class="ml-2 btn-register" href="{{ url_for('register') }}">реєструйся</a> або<a class="ml-2 btn-register" href="{{ url_for('login') }}">залогінся</a>, або ж
-            скористайся нашим<a class="ml-2 btn-register" href="{{ url_for('calculator') }}">калькулятором</a>:)
+            скористайся нашим<a class="ml-2 btn-register" href="{{ url_for('calculator') }}">калькулятором</a>:
         </p>
     </div>
 </div>
