--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -30,7 +30,7 @@
     <header class="site-header">
       <nav class="navbar navbar-expand-lg navbar-dark bg-steel fixed-top">
         <div class="container">
-          <a class="navbar-brand mr-4" href="/">UCU Health</a>
+          <a class="navbar-brand mr-4" href="{{ url_for('main') }}">UCU Health</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -44,9 +44,7 @@
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
               <!-- Navbar Left Side -->
-              <a class="nav-item nav-link" href="{{ url_for('main') }}">Main</a>
               <a class="nav-item nav-link" href="{{ url_for('calculator') }}">Calculator</a>
-              <a class="nav-item nav-link" href="{{ url_for('calories') }}">Calories</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
