--- a/main/templates/account_plan.html
+++ b/main/templates/account_plan.html
@@ -7,22 +7,15 @@
         {{ form.hidden_tag() }}
         <fieldset class = "form">
             <div class = "title">
-            Add Meal
+            Choose your plan
             </div>
-            <div, id = 'result'>Total Calories: 0</div>
             <div class="input_field">
-                {{ form.meal_name.label(class="form-control-label")}}
-                {% if form.meal_name.errors %}
-                    {{ form.meal_name(class="form-control form-control-xxl is-invalid")}}
-                    <div class='invalid-feedback'>
-                        {% for error in form.meal_name.errors %}
-                        <span>{{ error }}</span>
-                        {% endfor %}
-                    </div>
-                {% else %}
-                    {{ form.meal_name(class="form-control form-control-xxl", onchange="updateValues()")}}
-                {% endif%}
+                {% for option in choice_form.plan_choice %}
+                    {{ option() }}
+                    {{ option.label }}
+                {% endfor %}
             </div>
+            <div, id = 'result'>Total Calories: {{ current_user.calories }}</div>
             <div class="input_field">
                 {{ form.proteins.label(class="form-control-label")}}
                 {% if form.proteins.errors %}
@@ -64,7 +57,7 @@
         </div>
         </fieldset>
         <div class="input_field">
-            {{ form.submit(class="btn btn-outline-info")}}
+            {{ choice_form.submit(class="btn btn-outline-info")}}
         </div>
     </form>
 </div>
@@ -83,3 +76,4 @@
     }
   </script>
 {% endblock content %}
+    
