--- a/main/templates/account_update.html
+++ b/main/templates/account_update.html
@@ -1,11 +1,17 @@
 {% extends "layout.html" %}
 {% block content %}
     <div class="content-section">
-      <div class="media">
-        <img class="rounded-circle account-img" src="{{ image_file }}">
-        <div class="media-body">
-          <h2 class="account-heading">{{ current_user.username }}</h2>
-          <p class="text-secondary">{{ current_user.email }}</p>
+        <div class="media">
+            <img class="rounded-circle account-img" src="{{ image_file }}">
+            <div class="media-body">
+                <h2 class="account-heading">{{ current_user.username }}</h2>
+                <p class="text-secondary">{{ current_user.email }}</p>
+                <p></p>
+                <h3 class="text-secondary">My Daily Calories Intake: {{ current_user.calories }}</h3>
+                <h4 class="text-secondary">Proteins: {{ current_user.proteins }}</h4>
+                <h4 class="text-secondary">Carbohydrates: {{ current_user.carbs }}</h4>
+                <h4 class="text-secondary">Fats: {{ current_user.fats }}</h4>
+            </div>
         </div>
         <div class="content-section">
         <form method="POST" action="" enctype="multipart/form-data">
@@ -120,7 +126,7 @@
                     {{ form.picture(class = 'form-control-file')}}
                     {% if form.picture.errors %}
                             {% for error in form.picture.errors %}
-                                <span class="text-danger">{{ error }}</span></br>
+                                <span class="text-danger">{{ error }}</span>
                             {% endfor %}
                     {% endif %}
                 </div>
