--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -6,7 +6,6 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-
     <!-- Bootstrap and CSS -->
     <link
       rel="stylesheet"
@@ -17,8 +16,6 @@
       rel="stylesheet"
       type="text/css"
       href="{{ url_for('static', filename='main.css') }}" />
-
-
     <!-- Title -->
     {% if title %}
         <title>Ucu Health - {{ title }}</title>
@@ -49,8 +46,7 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
             {% if current_user.is_authenticated %}
-              <a class="nav-item nav-link" href="{{ url_for("logout") }}">Logout</a>
-              <a class="nav-item nav-link" href="{{ url_for("account") }}">Account</a>
+              <a class="nav-item nav-link" href="{{ url_for("account") }}"><img class="rounded-circle panel-img" src="{{ url_for('static', filename = 'profile_pics/' + 'account_icon.png') }} "></a>
             {% else %}
               <a class="nav-item nav-link" href="{{ url_for("login") }}">Login</a>
               <a class="nav-item nav-link" href="{{ url_for("register") }}">Register</a>
@@ -59,15 +55,6 @@
           </div>
         </div>
       </nav>
-      <div class="pos-f-t">
-        <div class="collapse" id="navbarToggleExternalContent">
-          <div class="navbar-nav bg-dark">
-            <a class="nav-item nav-link" id="Search" href="/">Menu list</a>
-            <a class="nav-item nav-link" id="Search" href="/">General recomendations</a>
-            <a class="nav-item nav-link" id="Dishes" href="/">Contact us</a>
-          </div>
-        </div>
-      </div>
     </header>
     <main role="main" class="container">
       <div class="row">
