--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,12 +1,26 @@
 {% extends "layout.html" %}
 {% block content %}
+<link href="{{ url_for('static', filename='main_bar.css') }}" rel="stylesheet">
+<h5 align="center">Calories consumed today</h5>
+<div class="progress-bar" role="progressbar">
+    <div class="progress-bar-value">0%</div>
+    <div class="progress-bar-fill"></div>
+</div>
+<br>
 <form method="POST" action="">
+  {% set total_calories = 0 %}
   {% for meal in meals %}
+  {% set total_calories = total_calories + meal.calories %}
   <article class="media content-section">
     <div class="media-body">
     <div class="article-metadata">
         <a class="mr-2" href="#">{{ meal.name }}</a>
         <small class="text-muted">{{ meal.calories }}</small>
+        {% if meal.choicen == False%}
+          <input type="checkbox" id="{{ meal.name }}" style="display:none"></input>
+        {% else %}
+          <input type="checkbox" id="{{ meal.name }}">Consumed</input>
+        {% endif %}
         <div>
             {% if meal.choicen == False %}
               <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{url_for('choose_dishes', meal_id = meal.id)}}">Choose Dishes</a>
@@ -29,4 +43,63 @@
     </div>
   </form>
 </form>
+<script>
+  class ProgressBar {
+    constructor(element, initialValue = 0) {
+      this.valueElem = element.querySelector('.progress-bar-value');
+      this.fillElem = element.querySelector('.progress-bar-fill');
+
+      this.setValue(initialValue);
+      this.fillElem.style.width = initialValue + '%';
+    }
+
+    setValue(newValue) {
+      if (newValue < 0) {
+        newValue = 0;
+      }
+      if (newValue > 100) {
+        newValue = 100;
+      }
+
+      this.value = newValue;
+      this.update();
+    }
+
+    update() {
+      const percentage = this.value + '%';
+
+      this.fillElem.style.width = percentage; // set fill element's width to percentage with a '%' sign appended
+
+      this.valueElem.textContent = percentage;
+    }
+  }
+
+  const meals = document.querySelectorAll('input[type="checkbox"]');
+const progressBar = new ProgressBar(document.querySelector('.progress-bar'));
+
+meals.forEach((meal) => {
+  meal.addEventListener('click', () => {
+    let selectedCalories = 0;
+    let totalCheckedCalories = 0;
+
+    meals.forEach((meal) => {
+      if (meal.checked) {
+        selectedCalories += parseInt(meal.parentElement.querySelector('small').innerText);
+      }
+    });
+
+    totalCheckedCalories = selectedCalories;
+    meals.forEach((meal) => {
+      if (!meal.checked) {
+        totalCheckedCalories += parseInt(meal.parentElement.querySelector('small').innerText);
+      }
+    });
+
+    const percentage = Math.round(selectedCalories / totalCheckedCalories * 100);
+    progressBar.setValue(percentage);
+  });
+
+});
+</script>
+
 {% endblock content %}
