--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -46,7 +46,7 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
             {% if current_user.is_authenticated %}
-              <a class="nav-item nav-link" href="{{ url_for("account") }}"><img class="rounded-circle panel-img" src="{{ url_for('static', filename = 'profile_pics/' + 'account_icon.png') }} "></a>
+              <a class="nav-item nav-link" href="{{ url_for("account") }}"><img class="rounded-circle panel-img" src="{{ url_for('static', filename = 'profile_pics/' + current_user.image_file ) }} "></a>
             {% else %}
               <a class="nav-item nav-link" href="{{ url_for("login") }}">Login</a>
               <a class="nav-item nav-link" href="{{ url_for("register") }}">Register</a>
