--- a/main/templates/view_dishes.html
+++ b/main/templates/view_dishes.html
@@ -11,8 +11,8 @@
                         {% for dish in dct[choice[0]] %}
                             {{ dish }}<br>
                         {% endfor %}
-                        {{ dishes[choice[0]].dishes }}
                         {{ dishes[choice[0]].calories }}
+                        {{ dishes[choice[0]].satis }}
                     </div>
                 {% endfor %}
             </fieldset>
