--- a/main/templates/meals.html
+++ b/main/templates/meals.html
@@ -1,27 +1,30 @@
 {% extends "layout.html" %}
 {% block content %}
-    <div class="content-section">
-        <form method="POST" action="">
-            {{ form.hidden_tag() }}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">{{ form.choices.label }}</legend>
-                {% if form.choices.errors %}
-                <div class="invalid-feedback">
-                    {% for error in form.choices.errors %}
-                        <span>{{ error }}</span>
-                    {% endfor %}
-                </div>
-                {% endif %}
-                {% for choice in form.choices %}
-                    <div class="form-check">
-                        {{ choice(class="form-check-input") }}
-                        {{ choice.label(class="form-check-label") }}
-                    </div>
+<div class="content-section">
+    <form method="POST" action="">
+        {{ form.hidden_tag() }}
+        <legend class="border-bottom mb-4">Test Form</legend>
+        {{ form.search() }} <br>
+        {% if form.meals.errors %}
+            <div class="invalid-feedback">
+                {% for error in form.meals.errors %}
+                    <span>{{ error }}</span>
                 {% endfor %}
-            </fieldset>
-            <div class="form-group">
-                {{ form.submit(class="btn btn-outline-info") }}
             </div>
-        </form>
-    </div>
+        {% endif %}
+        {% for category in form.meals %}
+            {{ category.choices.label }}
+                <fieldset class="form-group">
+                    <div class="form-check">
+                        {% for choice in category %}
+                            {{ choice() }}
+                        {% endfor %}
+                    </div>
+                </fieldset>
+        {% endfor %}
+        <div class="form-group">
+            {{ form.submit(class="btn btn-outline-info") }}
+        </div>
+    </form>
+</div>
 {% endblock content %}
