--- a/main/templates/account.html
+++ b/main/templates/account.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
+  <link href="{{ url_for('static', filename='account.css') }}" rel="stylesheet">
   <div class="content-section">
     <div class="media">
       <img class="rounded-circle account-img" src="{{ image_file }}">
@@ -8,16 +9,16 @@
         <p class="text-secondary">{{ current_user.email }}</p>
       </div>
     </div>
-  </div>
   <form method="POST">
-    <div class="form-group">
+    <div class="input_field">
       <input type="submit", name="submit_button", value="Personal Info", class="form-control", id="personal_info">
     </div>
-    <div class="form-group">
+    <div class="input_field">
       <input type="submit", name="submit_button", value="Personal Plan", class="form-control", id="personal_plan">
     </div>
-    <div class="form-group">
-      <input type="submit", name="submit_button", value="Log Out", class="form-control", id="log out">
+    <div class="input_field">
+      <input type="submit", name="submit_button", value="Log Out", class="form-control", id="log_out">
     </div>
   </form>
+  </div>
 {% endblock content %}
