--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -33,12 +33,12 @@
   </article>
   {% endfor %}
   <form method="POST" action="">
-    {% if not meals %} 
-    <div class="form-group">
+    {% if not meals %}
+    <div class="input_field">
       <input type="submit", name="submit_button", value="Daily Distribution", class="form-control", id="daily_distribution">
     </div>
     {% endif %}
-    <div class="form-group">
+    <div class="input_field">
       <input type="submit", name="submit_button", value="Add Meal", class="form-control", id="all_meal">
     </div>
   </form>
