--- a/main/templates/account.html
+++ b/main/templates/account.html
@@ -17,6 +17,9 @@
       <input type="submit", name="submit_button", value="Personal Plan", class="form-control", id="personal_plan">
     </div>
     <div class="input_field">
+      <input type="submit", name="submit_button", value="Settings", class="form-control", id="settings">
+    </div>
+    <div class="input_field">
       <input type="submit", name="submit_button", value="Log Out", class="form-control", id="log_out">
     </div>
   </form>
