--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -42,6 +42,7 @@
             <div class="navbar-nav mr-auto">
               <!-- Navbar Left Side -->
               <a class="nav-item nav-link" href="{{ url_for('calculator') }}">Calculator</a>
+              <a class="nav-item nav-link" href="{{ url_for('menu') }}">Menu</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
